feat: moderate nicknames and add favorite views
